# boomerang

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  flake.nix  justfile  otel-collector-config.yaml  rustfmt.toml
.claude/: settings.json
.github/workflows/: release.yml
adapters/telegram/: Cargo.toml
adapters/telegram/src/: bot.rs  io_adapter_impl.rs  lib.rs
agent/: Cargo.toml
agent/config/: dev.toml
agent/src/: chat.rs  config.rs  executor.rs  lib.rs  main.rs  scheduler.rs  task_execution.rs
agent/src/ai/: metrics.rs  mod.rs  provider.rs  session.rs  summarizer.rs  types.rs
agent/src/ai/providers/: openai.rs  openrouter.rs
agent/src/core/: mod.rs  orchestrator.rs  worker.rs
agent/src/memory/: file.rs  mod.rs
agent/src/notifications/: mod.rs  ntfy.rs
agent/src/prompts/: default_system_base.txt  pruning_eval.txt  scheduled_system.txt  summarize.txt
agent/src/pruning/: evaluator.rs  mod.rs  pruner.rs  scorer.rs
agent/src/tools/: introspection.rs  memory.rs  mod.rs  registry.rs  schedule.rs  spawn.rs  tool_trait.rs  web_search.rs
backend/: .gitignore  Cargo.toml  docker-compose.yaml  flake.nix
backend/.claude/: settings.local.json
backend/agent/: CLAUDE.md  Cargo.toml
backend/agent/src/: config.rs  lib.rs  main.rs  scheduler.rs
backend/agent/src/ai/: mod.rs  provider.rs  session.rs  types.rs
backend/agent/src/ai/providers/: openai.rs
backend/agent/src/temporal/: mod.rs  scheduler.rs
backend/config/: dev.toml  prod.toml
backend/server/config/: prod.toml
backend/server/src/: config.rs  main.rs
backend/src/: config.rs  lib.rs  main.rs
backend/src/ai/: mod.rs  session.rs  types.rs
backend/src/ai/providers/: openai.rs
backend/src/tools/: mod.rs  web_search.rs
common/: Cargo.toml
common/src/: adapters.rs  config.rs  lib.rs  restate.rs  turn.rs
config/: dev.toml
ios/: .gitignore  README.md  flake.nix
ios/boomerang/: APIService.swift  BoomerangApp.swift  Config-Production.plist  Config.plist  ConfigManager.swift  ContentView.swift  NetworkConfig.swift  ScheduleService.swift
ios/boomerang.xcodeproj/: project.pbxproj
ios/boomerang.xcodeproj/project.xcworkspace/xcuserdata/mknaw.xcuserdatad/: UserInterfaceState.xcuserstate
ios/boomerang.xcodeproj/xcuserdata/mknaw.xcuserdatad/xcschemes/: xcschememanagement.plist
pwa/: package.json
pwa/public/: index.html  manifest.json  sw.js
pwa/src/: App.css  App.js  index.css
pwa/src/services/: notificationService.js
restate-client/: Cargo.toml
restate-client/src/: lib.rs
server/: Cargo.toml
server/.claude/: settings.local.json
server/config/: dev.toml
server/src/: auth.rs  config.rs  main.rs
server/src/resources/: execution.rs  mod.rs  schedule.rs
src/: adapter_manager.rs  main.rs  telemetry.rs
