[workspace]
members = ["server", "agent"]
resolver = "2"

[workspace.dependencies]
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full", "macros"] }
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.142"

# Server-specific dependencies
axum = { version = "0.7", features = ["macros"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
chrono = { version = "=0.4.39", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1.1"
jsonwebtoken = "9.3"

# Agent-specific dependencies
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
rmcp = "0.5.0"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["io"] }

# Scheduling dependencies
tokio-cron-scheduler = "0.14"
cron = "0.13"