[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
restate-sdk = "0.6.0"
rmcp = { workspace = true }
schemars = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tokio-cron-scheduler = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

grep = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
regex = "1.12.3"

[dev-dependencies]
tempfile = "3.0"
