[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
restate-sdk = "0.6.0"
dirs = "5.0"
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
