[package]
name = "restate-client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
