[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }