[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }