[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
restate-sdk = "0.1"
rmcp = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tokio-cron-scheduler = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
